--- a/app/views/partials/_sidebar.html.erb
+++ b/app/views/partials/_sidebar.html.erb
@@ -1,3 +1,4 @@
+<% if params[:controller] == 'about' %>
 <div class="well">
 <h3>Location Info</h3>
 	<ul>
@@ -5,4 +6,5 @@
 		<li>1010 Market Street, Ste. 214</li>
 		<li>San Francisco, CA 90302</li>
 	</ul>
-</div>
+</div> 
+<% end %>
