--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,3 +29,15 @@ header{
 	margin-bottom: 20px;
 
 }
+
+footer{
+	background:#333;
+	color:#fff;
+	height: 60px;
+	margin-top: 20px;
+	text-align: center;
+	padding-top:20px;
+
+}
+
+
