--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,5 +59,9 @@
       </div>
     </section>
 
+    <footer>
+      <div class="container">
+        <p>Copyright &copy; 2014</p>
+
 </body>
 </html>
