--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,23 +6,33 @@
 			<%= link_to 'Read More', book_path(1), class:'btn btn-primary' %>
 		</div>
 		<div class="col-md-3 col-sm-3">
-
+			<h3>Ruby On Rails Power</h3>
+			<%= image_tag('covers/ajax_on_rails.jpg') %>
+			<%= link_to 'Read More', book_path(1), class:'btn btn-primary' %>
 		</div>
 		<div class="col-md-3 col-sm-3">
-
+			<h3>Ruby On Rails Power</h3>
+			<%= image_tag('covers/beginning_php_5.jpg') %>
+			<%= link_to 'Read More', book_path(1), class:'btn btn-primary' %>
 		</div>
 	</div>
 </div>
 <div id="books-index">
 	<div class="row">
 		<div class="col-md-3 col-sm-3">
-
+			<h3>Ruby On Rails Power</h3>
+			<%= image_tag('covers/head_first_php.jpg') %>
+			<%= link_to 'Read More', book_path(1), class:'btn btn-primary' %>
 		</div>
 		<div class="col-md-3 col-sm-3">
-
+			<h3>Ruby On Rails Power</h3>
+			<%= image_tag('covers/html5_css3.jpg') %>
+			<%= link_to 'Read More', book_path(1), class:'btn btn-primary' %>
 		</div>
 		<div class="col-md-3 col-sm-3">
-
+			<h3>Ruby On Rails Power</h3>
+			<%= image_tag('covers/the_rails_3_way.jpg') %>
+			<%= link_to 'Read More', book_path(1), class:'btn btn-primary' %>
 		</div>
 
 	</div>
