--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,18 @@
-<h1>Books#new</h1>
-<p>Find me in app/views/books/new.html.erb</p>
+<h2>Add New Book</h2>
+
+<%= form_for @book do |f| %>
+
+	<div class="form-group">
+		<%= f.label :title %><br />
+		<%= f.text_field :title, class:'form-control' %><br />
+	</div>
+	<div class="form-group">
+		<%= f.label :isbn %><br />
+		<%= f.text_field :isbn, class:'form-control' %><br />
+	</div>
+	<div class="form-group">
+		<%= f.label :category %><br />
+		<%= f.select :category, Category.all.collect {|x| [x.name, x.id]}, {:include_blank => 'Select a category'}, class:'form-control' %><br /><br />
+	</div>
+
+<% end %>
