--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div id="books-show">
+	<h2>Ruby on Rails Power</h2>
+	<div class="books-show-left">
+		<%= image_tag('covers/ruby_on_rails_power.jpg') %>
+	</div>
+	<div class="books-show-right">
+		<h3>Book info:</h3>
+		<ul>
+			<li>Cagegory:<strong></strong> Ruby on Rails </li>
+			<li>Author:<strong></strong> Aneesha Bakharia </li>
+			<li>Publisher:<strong></strong> Course Technology PTR</li>
+			<li>Year:<strong></strong> 2007</li>
+			<li>ISBN:<strong></strong> 1568468468</li>
+			<li>Format:<strong></strong> Paperback</li>
+			<li>Pages:<strong></strong> 678</li>
+		</ul>
+		<%=link_to "Buy for $5.45","http://www.ebay.com", class:'btn btn-success',target:'_blank' %>
+	</div>
+	<div class="clearfix"></div>
+	<h4>Excerpt</h4>
+	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
+
+</div>
+			
+
+
+
+
+
