--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -14,5 +14,37 @@
 		<%= f.label :category %><br />
 		<%= f.select :category, Category.all.collect {|x| [x.name, x.id]}, {:include_blank => 'Select a category'}, class:'form-control' %><br /><br />
 	</div>
+	
+	<div class="form-group">
+		<%= f.label :publisher %><br />
+		<%= f.select :publisher, Publisher.all.collect {|x| [x.name, x.id]}, {:include_blank => 'Select a publisher'}, class:'form-control' %><br /><br />
+	</div>
+	<div class="form-group">
+		<%= f.label :author %><br />
+		<%= f.select :author, Author.all.collect {|x| [x.name, x.id]}, {:include_blank => 'Select a author'}, class:'form-control' %><br /><br />
+	</div>
 
+	<div class="form-group">
+		<%= f.label :format %><br>
+		<%= f.text_field :format, class:'form-control' %>  <br>
+	</div>
+	<div class="form-group">
+		<%= f.label :excerpt %> <br>
+		<%= f.text_area :excerpt, class:'form-control' %> <br>
+	</div>
+	<div class="form-group">
+		<%= f.label :pages %> <br>
+		<%= f.number_field :pages, class:'form-control' %> <br>
+	</div>
+	<div class="form-group">
+		<%= f.label :price %> <br>
+		<%= f.text_field :price, class:'form-control' %>
+	</div>
+	<div class="form-group">
+		<%= f.label :buy %> <br>
+		<%= f.text_field :buy, class:'form-control' %> 
+	</div>
+
+	<%= f.submit "Submit", class:'btn btn-primary' %>
+	<%= link_to "Cancel", books_path, class:'btn btn-default' %>
 <% end %>
