--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,7 +1,11 @@
 <h2>Add New Book</h2>
 
 <%= form_for @book do |f| %>
-
+	<% if @book.errors.any? %>
+		<% @book.errors.full_messages.each do |msg| %>
+		<div class="alert alert-danger"><%= msg %></div>
+		<% end %>
+	<% end %>
 	<div class="form-group">
 		<%= f.label :title %><br />
 		<%= f.text_field :title, class:'form-control' %><br />
@@ -21,7 +25,7 @@
 	</div>
 	<div class="form-group">
 		<%= f.label :author %><br />
-		<%= f.select :author, Author.all.collect {|x| [x.name, x.id]}, {:include_blank => 'Select a author'}, class:'form-control' %><br /><br />
+		<%= f.select :author, Author.all.collect {|x| [x.first_name + ' ' + x.last_name, x.id]}, {:include_blank => 'Select a author'}, class:'form-control' %><br /><br />
 	</div>
 
 	<div class="form-group">
