--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8">
+            <% if flash[:notice] %>
+              <div class="alert alert-success"><%= flash[:notice] %></div>
+            <% end %>
             <%= yield %>
+            <% if flash[:alert] %>
+              <div class="alert alert-danger"><%= flash[:alert] %></div>
+            <% end %>
           </div>
           <div class="col-md-4">
             <%= render 'partials/sidebar' %>
@@ -61,7 +67,7 @@
 
     <footer>
       <div class="container">
-        <p>Copyright &copy; 2014</p>
-
+        <p>Copyright &copy; 2015</p>
+      </div>
 </body>
 </html>
