--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -16,16 +16,26 @@
 	</div>
 	<div class="form-group">
 		<%= f.label :category %><br />
-		<%= f.select :category, Category.all.collect {|x| [x.name, x.id]}, {:include_blank => 'Select a category'}, class:'form-control' %><br /><br />
+		<%= f.select :category_id, Category.all.collect {|x| [x.name, x.id]}, {:include_blank => 'Select a category'}, class:'form-control' %><br /><br />
 	</div>
 	
 	<div class="form-group">
 		<%= f.label :publisher %><br />
-		<%= f.select :publisher, Publisher.all.collect {|x| [x.name, x.id]}, {:include_blank => 'Select a publisher'}, class:'form-control' %><br /><br />
+		<%= f.select :publisher_id, Publisher.all.collect {|x| [x.name, x.id]}, {:include_blank => 'Select a publisher'}, class:'form-control' %><br /><br />
 	</div>
 	<div class="form-group">
 		<%= f.label :author %><br />
-		<%= f.select :author, Author.all.collect {|x| [x.first_name + ' ' + x.last_name, x.id]}, {:include_blank => 'Select a author'}, class:'form-control' %><br /><br />
+		<%= f.select :author_id, Author.all.collect {|x| [x.first_name + ' ' + x.last_name, x.id]}, {:include_blank => 'Select a author'}, class:'form-control' %><br /><br />
+	</div>
+
+	<div class="form-group">
+		<%= f.label :year %> <br>
+		<%= f.text_field :year, class:'form-control' %> <br>
+	</div>
+
+	<div class="form-group">
+		<%= f.label :coverpath %> <br>
+		<%= f.text_field :coverpath, class:'form-control' %> <br>
 	</div>
 
 	<div class="form-group">
